src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>zqu__Allow_Feature_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if features in the product can be changed when creating QuoteProductFeatures</description>
        <inlineHelpText>If features in the product can be changed when creating QuoteProductFeatures</inlineHelpText>
        <label>Allow Feature Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Base Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Product.</description>
        <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Product.</description>
        <inlineHelpText>The Effective Start Date of the Product.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SKU__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Product SKU.</description>
        <inlineHelpText>This field will be auto-generated if no value specified.</inlineHelpText>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syncing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standalone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Product.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>